--- a/academics.html
+++ b/academics.html
@@ -60,7 +60,7 @@
 
   </head>
 
-  <body>
+  <body tabindex="0">
 
     <!-- Hero -->
     <div class="hero" data-theme="dark" style="background-image: url('images/gradient-1.svg');">
