--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <!-- Hero -->
     <div class="hero" data-theme="dark" style="background-image: url('images/gradient-4.svg');">
       <nav class="container-fluid">
+        <a href="#main" class="skip">Go to Main Content</a>
         <ul>
           <li><a href="./" class="contrast" onclick="event.preventDefault()"><img class="max_width_40" alt="HitAndMatch logo" src="images/logo.png"></a></li>
         </ul>
@@ -84,7 +85,7 @@
     </div><!-- ./ Hero -->
 
     <!-- Main -->
-    <main class="container">
+    <main class="container" id="main">
       <div class="grid">
 
         <div>
