--- a/sports.html
+++ b/sports.html
@@ -59,7 +59,7 @@
   
     </head>
 
-    <body>
+    <body tabindex="0">
         <!-- Hero -->
         <div class="hero" data-theme="dark" style="background-image: url('images/gradient-3.svg');">
             <nav class="container-fluid">
