--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <body tabindex="0">
     <a href="#main" class="skip">Go to Main Content</a>
     <!-- Hero -->
-    <div class="hero" data-theme="dark" style="background-image: url('images/gradient-4.svg');">
+    <div class="hero" data-theme="dark" >
       
       <nav class="container-fluid">
         <ul>
