--- a/sports.html
+++ b/sports.html
@@ -60,6 +60,7 @@
     </head>
 
     <body tabindex="0">
+        <a href="#main" class="skip">Skip to Content</a>
         <!-- Hero -->
         <div class="hero" data-theme="dark" style="background-image: url('images/gradient-3.svg');">
             <nav class="container-fluid">
@@ -83,7 +84,7 @@
         </div><!-- ./ Hero -->
 
 
-        <main class="container">
+        <main id="main" class="container">
             <div class="grid">
     
                 <div>
