--- a/academics.html
+++ b/academics.html
@@ -61,7 +61,7 @@
   </head>
 
   <body tabindex="0">
-
+    <a href="#main" class="skip">Skip to Content</a>
     <!-- Hero -->
     <div class="hero" data-theme="dark" style="background-image: url('images/gradient-1.svg');">
       <nav class="container-fluid">
@@ -84,7 +84,7 @@
     </div><!-- ./ Hero -->
 
     <!-- Main -->
-    <main class="container">
+    <main id="main" class="container">
       <div class="grid">
 
         <div>
