--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           </p>
           <!--Comments input-->
           <label for="comments" class="required">Comments </label>
-          <textarea name="comments" required></textarea>
+          <textarea id="comments" required></textarea>
           <!-- Buttons -->
           <input type="submit" value="Submit" >
           <input type="reset" value="Clear" >
